--- a/templates/start.html
+++ b/templates/start.html
@@ -7,74 +7,74 @@
 </head>
 
 <form action = "/handle_data" method = "POST">
-    "this is a form"<br><br>
+  "Sign up Form"<br><br>
 
-    First name:<br>
-    <input type="text" placeholder="firstname" name = 'firstname' required><br>
-    Last name:<br>
-    <input type="text" placeholder="lastname" name = 'lastname' required><br>
-    Country:<br>
-    <select id="countries" name="countries" required>
-        <option value="Brunei">Brunei</option>
-        <option value="Cambodia">Cambodia</option>
-        <option value="Indonesia">Indonesia</option>
-        <option value="Laos">Laos</option>
-        <option value="Malaysia">Malaysia</option>
-        <option value="Myanmar">Maynmar</option>
-        <option value="Philippines">Philippines</option>
-        <option value="Singapore">Singapore</option>
-        <option value="Thailand">Thailand</option>
-        <option value="Vietnam">Vietnam</option>
-        </select>
-    <br>
-        
-    
-    Contact Number:<br>
-    <input type="text" placeholder="contact number" name="contactnumber"required><br>
-    Email:<br>
-    <input name="email1" type="email" required="1" id="email1" size="44" name = "email" required/><br>
-    
-    <label for = "emailConfirm"> Confirm email: </label>
-    <br>        
-    <input name='email2', type = 'email'>
-    <button type='Check'equalTo=email1 id='validate'>Validate!</button>
-
-
-    <br>
-    Password:<br>
-    <input name="password1" type="text" required="1" id="password1" size="44" name = "email" required/><br>
-    
-    <label for = "passwordConfirm"> Confirm password: </label>
-    <br>        
-    <input name='password2', type = 'text'>
-    <button type='Check'equalTo=password1 id='validate'>Validate!</button>
- 
-    <br>
-    Highest Education Level:
-    <br>
-
-    <input type="radio" name='group1' value="PSLE" required>PSLE <br>
-    <input type="radio" name='group1' value="GCE 'O' level" required>GCE 'O' level <br>
-    <input type="radio" name='group1' value="GCE 'A' level" required>GCE 'A' level <br>
-    <input type="radio" name='group1' value="Diploma" required>Diploma <br>
-    <input type="radio" name='group1' value="IB" required>IB <br>
-    <input type="radio" name='group1' value="Bsc Degree" required>Bsc Degree <br>
-    <input type="radio" name='group1' value="Masters" required>Masters <br>
-    <input type="radio" name='group1' value="Others" required>
-    Others:<br>
-    <input type="text" name='group1' placeholder="Please Specify"><br>
+  First name:<br>
+  <input type="text" placeholder="firstname" name = 'firstname' required><br>
+  Last name:<br>
+  <input type="text" placeholder="lastname" name = 'lastname' required><br>
+  Country:<br>
+  <select id="countries" name="countries" required>
+      <option value="Brunei">Brunei</option>
+      <option value="Cambodia">Cambodia</option>
+      <option value="Indonesia">Indonesia</option>
+      <option value="Laos">Laos</option>
+      <option value="Malaysia">Malaysia</option>
+      <option value="Myanmar">Maynmar</option>
+      <option value="Philippines">Philippines</option>
+      <option value="Singapore">Singapore</option>
+      <option value="Thailand">Thailand</option>
+      <option value="Vietnam">Vietnam</option>
+      </select>
+  <br>
+      
+  
+  Contact Number:<br>
+  <input type="text" placeholder="contact number" name="contactnumber"required><br>
+  Email:<br>
+  <input name="email1" type="email" required="1" id="email1" size="44" name = "email" required/><br>
+  
+  <label for = "emailConfirm"> Confirm email: </label>
+  <br>        
+  <input name='email2', type = 'email'>
+  <button type='Check'equalTo=email1 id='validate'>Validate!</button>
 
 
-    
-    <br>
-    <input type="checkbox" required>I agree to the terms and conditions* 
-    <p style="color:red">*This is a required field</p>
-    <br>
+  <br>
+  Password:<br>
+  <input name="password1" type="text" required="1" id="password1" size="44" name = "email" required/><br>
+  
+  <label for = "passwordConfirm"> Confirm password: </label>
+  <br>        
+  <input name='password2', type = 'text'>
+  <button type='Check'equalTo=password1 id='validate'>Validate!</button>
 
-    <input type="submit" value="Go"><br>
+  <br>
+  Highest Education Level:
+  <br>
 
-    
- 
+  <input type="radio" name='group1' value="PSLE" required>PSLE <br>
+  <input type="radio" name='group1' value="GCE 'O' level" required>GCE 'O' level <br>
+  <input type="radio" name='group1' value="GCE 'A' level" required>GCE 'A' level <br>
+  <input type="radio" name='group1' value="Diploma" required>Diploma <br>
+  <input type="radio" name='group1' value="IB" required>IB <br>
+  <input type="radio" name='group1' value="Bsc Degree" required>Bsc Degree <br>
+  <input type="radio" name='group1' value="Masters" required>Masters <br>
+  <input type="radio" name='group1' value="Others" required>
+  Others:<br>
+  <input type="text" name='group1' placeholder="Please Specify"><br>
+
+
+  
+  <br>
+  <input type="checkbox" required>I agree to the terms and conditions* 
+  <p style="color:red">*This is a required field</p>
+  <br>
+
+  <input type="submit" value="Go"><br>
+
+  
+
   </form>
 
   <html>
