add commitment key

--- a/templates/start.html
+++ b/templates/start.html
@@ -65,7 +65,11 @@
   <input type="text" name='group1' placeholder="Please Specify"><br>
 
 
-  
+  <br>
+  Commitment:<br>
+  <input type="number" name="commitment">
+  <br>
+
   <br>
   <input type="checkbox" required>I agree to the terms and conditions* 
   <p style="color:red">*This is a required field</p>
