--- a/templates/userdata.html
+++ b/templates/userdata.html
@@ -4,5 +4,6 @@
   <p>email: {{user.email}}</p>
   <p>countries: {{user.countries}}</p>
   <p>password: {{user.password}}</p>
+  <p>commitment: {{user.commitment}} months</p>
   <p>END OF USER</p>
   {% endfor %}
