--- a/templates/start.html
+++ b/templates/start.html
@@ -8,11 +8,9 @@
 
 <form action = "/handle_data" method = "POST">
   "Sign up Form"<br><br>
-
-  First name:<br>
-  <input type="text" placeholder="firstname" name = 'firstname' value="a" required><br>
-  Last name:<br>
-  <input type="text" placeholder="lastname" name = 'lastname' value="b" required><br>
+  
+  Name:<br>
+  <input type="text" placeholder="Name" name = 'name' value="b" required><br>
   Country:<br>
   <select id="countries" name="countries" required>
       <option value="Brunei">Brunei</option>
@@ -64,6 +62,11 @@
   Others:<br>
   <input type="text" name='group1' placeholder="Please Specify"><br>
 
+
+  <br>
+  Commitment:<br>
+  <input type="number" name="commitment"value=3 >
+  <br>
 
   <br>
   Commitment:<br>
