input industry into start.html

--- a/templates/start.html
+++ b/templates/start.html
@@ -74,6 +74,22 @@
   <br>
 
   <br>
+  Industry:
+  <br>
+
+  <input type="radio" name='group2' value="supplychainmanagement" checked required>Supply Chain Management <br>
+  <input type="radio" name='group2' value="food&beverage" checked required>Food & Beverage <br>
+  <input type="radio" name='group2' value="retail" checked required>Retail <br>
+  <input type="radio" name='group2' value="government" checked required> Government <br>
+  <input type="radio" name='group2' value="construction" checked required>Construction <br>
+  <input type="radio" name='group2' value="education" checked required>Education <br>
+  <input type="radio" name='group2' value="business" checked required>Business <br>
+  <input type="radio" name='group2' value="design&media" checked required>Design & Media <br>
+  <input type="radio" name='group2' value="Others" required>
+  Others:<br>
+  <input type="text" name='group1' placeholder="Please Specify"><br>
+
+  <br>
   <input type="checkbox" checked required>I agree to the terms and conditions* 
   <p style="color:red">*This is a required field</p>
   <br>
