--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -23,13 +23,13 @@
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li><a href="/">Home</a></li>
-            <li><a href="about.html">About</a></li>
+            <li><a href="/about">About</a></li>
             <li><a href="/articles">Articles?</a></li>
           </ul>
 
           <ul class="nav navbar-nav navbar-right">
             
-            <li><a href="../templates/start.html">Register</a></li>
+            <li><a href="/form">Register</a></li>
               <li><a href="/login">Login</a></li>
               
             
