--- a/templates/start.html
+++ b/templates/start.html
@@ -1,51 +1,6 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>MyFlaskApp</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  </head>
-  <body>
- 
-    <div class="container">
-
-<nav class="navbar navbar-default">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">AYEAYEAYE</a>
-        </div>
-        <div id="navbar" class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
-            <li><a href="/">Home</a></li>
-            <li><a href="/about">About</a></li>
-            <li><a href="/articles">Articles?</a></li>
-          </ul>
-
-          <ul class="nav navbar-nav navbar-right">
-            
-            <li><a href="/forms">Register</a></li>
-              <li><a href="/login">Login</a></li>
-            
-
-          </ul>
-        </div><!--/.nav-collapse -->
-      </div>
-    </nav>
-
-
-    </div>
-
-<!DOCTYPE html>
-<html>
-<head>
-<title>Page Title</title>
-</head>
+{% extends 'base.html' %}
+  
+{% block content %}
 
 <form action = "/handle_data" method = "POST"> 
  <center>
@@ -132,6 +87,6 @@
     
 
   </form>
-</center> 
-  <html>
-<head>
+</center>
+
+{% endblock %}
