updates on changes and created base.html

--- a/templates/about.html
+++ b/templates/about.html
@@ -1,8 +1,9 @@
 {% extends 'base.html' %}
   
 {% block content %}
-
-  <h1>About Us</h1>
-Business model :)
+<center>
+<h1>About Us</h1>
+Apprentice.asia is a marketplace for matching between companies and potential apprentices
+<br>
 
 {% endblock %}
