--- a/templates/base.html
+++ b/templates/base.html
@@ -2,79 +2,53 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>MyFlaskApp</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <title>Apprentice.asia</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   </head>
-  <body>
- 
-    <div class="container">
-
-<nav class="navbar navbar-default">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">AYEAYEAYE</a>
-        </div>
-        <div id="navbar" class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
-            <li><a href="/">Home</a></li>
-            <li><a href="/about">About</a></li>
-            <li><a href="/articles">Articles?</a></li>
-          </ul>
-
-          <ul class="nav navbar-nav navbar-right">
-            
-            <li><a href="/form">Register</a></li>
-              <li><a href="/login">Login</a></li>
-              
-            
-
-          </ul>
-        </div>
-      </div>
-    </nav>
-
-
-    </div>
-   
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script src="//cdn.ckeditor.com/4.6.2/basic/ckeditor.js"></script>
-    <script type="text/javascript">
-      CKEDITOR.replace('editor')
-
-
+  <nav>
      
-    </script>
-  
-  <body background="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSiJwQTsFnrDW3pd1Fe6MrStBXiW1kGemD-zMTtxb2-SmrlUR7F">
-    
-    
-    <br>
-    <center>
-    {% block content %}{% endblock %}
-  </center>
-  </body>
-
-  
-  <nav class="navbar navbar-default">
-    <div class="container">
-      <div class="navbar-footer">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light" >
+                <div class="container">
+        <a class="navbar-brand" href="#">Apprentice.asia</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
         </button>
-        <a class="navbar-brand" href="#">Contact Us</a>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item active">
+              <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/about">About Us</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/result">job Listing</a>
+            </li>
+            <form class="form-inline my-2 my-lg-0">
+                <li class="nav-item">
+                     <a class="nav-link" href="/form">Register</a>
+                 </li>
+                 <li class="nav-item">
+                    <a class="nav-link" href="/login">Login</a>
+                 </li>
+
+            </ul>
+          </ul>
+        </div>
+      </nav>
+      <body>
+      {% block content %}{% endblock %}
+    </body>
+
+
+ 
+<nav class="navbar fixed-bottom navbar-light bg-light">
+    <a class="navbar-brand" href="#">Contact Us: abc@xyz.com.sg </a>
+  
+  
+      
       </div>
-      <h6>abc@xyz.com.sg</h6>
-        </ul>
-      </div><!--/.nav-collapse -->
+      </div></nav>
     </div>
   </nav>
 
