first image uploaded

--- a/templates/about.html
+++ b/templates/about.html
@@ -4,6 +4,15 @@
 <center>
 <h1>About Us</h1>
 Apprentice.asia is a marketplace for matching between companies and potential apprentices
+<br> <br>
+According to International Labour Organisation(ILO),<br>
+One of the UN 2030 agenda is:
+"Promote sustained, inclusive and sustainable economic growth, full and productive employment and decent work for all." 
 <br>
+Targeting youth employment, child and forced labour, skills enhancement, empowerment of women and increases in productivity and productive employment.
+<br><br>
+<h3>Apprentice.asia hopes to provide a marketplace for matching <br>between companies and potential apprentices</h3>
+<br>
+<img src="/static/newtracks.png" alt="missing"/>
 
 {% endblock %}
