--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,7 @@
               <a class="nav-link" href="/about">About Us</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/result">job Listing</a>
+              <a class="nav-link" href="/result">Job Listing</a>
             </li>
             <form class="form-inline my-2 my-lg-0">
                 <li class="nav-item">
@@ -41,7 +41,15 @@
     </body>
 
 
- 
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
 <nav class="navbar fixed-bottom navbar-light bg-light">
     <a class="navbar-brand" href="#">Contact Us: abc@xyz.com.sg </a>
   
