Seeded better data

--- a/app/templates/start.html
+++ b/app/templates/start.html
@@ -67,14 +67,14 @@
   Industry:
   <br>
 
-  <input type="radio" name='industry' value="supplychainmanagement" checked required>Supply Chain Management <br>
-  <input type="radio" name='industry' value="food&beverage" checked required>Food & Beverage <br>
-  <input type="radio" name='industry' value="retail" checked required>Retail <br>
-  <input type="radio" name='industry' value="government" checked required> Government <br>
-  <input type="radio" name='industry' value="construction" checked required>Construction <br>
-  <input type="radio" name='industry' value="education" checked required>Education <br>
-  <input type="radio" name='industry' value="business" checked required>Business <br>
-  <input type="radio" name='industry' value="design&media" checked required>Design & Media <br>
+  <input type="radio" name='industry' value="Supply Chain Management" checked required>Supply Chain Management <br>
+  <input type="radio" name='industry' value="Food & Beverage" required>Food & Beverage <br>
+  <input type="radio" name='industry' value="Retail"  required>Retail <br>
+  <input type="radio" name='industry' value="Government"  required> Government <br>
+  <input type="radio" name='industry' value="Construction"  required>Construction <br>
+  <input type="radio" name='industry' value="Education"  required>Education <br>
+  <input type="radio" name='industry' value="Business"  required>Business <br>
+  <input type="radio" name='industry' value="Design & Media"  required>Design & Media <br>
  <br>
 
 
